[package]
name = "dw3xxx"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An experimental driver crate for the DW3XXX series of UWB ranging modules."
readme = "README.md"
repository = "https://github.com/wtoll/dw3xxx"

[dependencies]
embedded-hal-nb = "1.0.0"
nb = "1.1.0"
